<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/device_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/device_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connected_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connected"
        app:layout_constraintBottom_toTopOf="@+id/current_state_label"
        app:layout_constraintStart_toStartOf="@+id/device_name_label"
        app:layout_constraintTop_toBottomOf="@+id/device_name_label" />

    <TextView
        android:id="@+id/current_state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/current_state_label"
        app:layout_constraintStart_toStartOf="@+id/connected_label"
        app:layout_constraintTop_toBottomOf="@+id/device_name_label" />

    <TextView
        android:id="@+id/speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:text="@string/speed_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/device_name_label" />

    <TextView
        android:id="@+id/current_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_time_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/speed_label"
        app:layout_constraintTop_toTopOf="@+id/connected_label" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/current_state_label" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/motor_speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motor_speed_txtbox"
        app:layout_constraintBottom_toTopOf="@+id/seekBar2"
        app:layout_constraintStart_toStartOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/state_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/state_time_txt"
        app:layout_constraintStart_toStartOf="@+id/seekBar2"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    <Button
        android:id="@+id/refresh_btn"
        android:layout_width="97dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/refresh_btn"
        app:layout_constraintEnd_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toBottomOf="@+id/current_state_label" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_state"
        app:layout_constraintStart_toStartOf="@+id/current_state_label"
        app:layout_constraintTop_toTopOf="@+id/refresh_btn" />

    <Spinner
        android:id="@+id/state_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/refresh_btn"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/refresh_btn" />

    <Button
        android:id="@+id/update_state_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/update_btn"
        app:layout_constraintEnd_toEndOf="@+id/seekBar2"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/seekBar2"
        app:layout_constraintTop_toBottomOf="@+id/direction_switch" />

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jog_bck_btn"
        app:layout_constraintEnd_toEndOf="@+id/receive_text"
        app:layout_constraintTop_toTopOf="@+id/fwd_btn" />

    <Button
        android:id="@+id/fwd_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/jog_fwd_btn"
        app:layout_constraintStart_toStartOf="@+id/receive_text"
        app:layout_constraintTop_toBottomOf="@+id/update_state_button" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/start_btn"
        app:layout_constraintStart_toStartOf="@+id/fwd_btn"
        app:layout_constraintTop_toBottomOf="@+id/fwd_btn" />

    <Button
        android:id="@+id/stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_btn"
        app:layout_constraintEnd_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="@+id/start_btn" />

    <Switch
        android:id="@+id/direction_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/direction_btn"
        app:layout_constraintStart_toStartOf="@+id/seekBar2"
        app:layout_constraintTop_toBottomOf="@+id/state_time_label" />

    <Switch
        android:id="@+id/gate_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gate_state_btn"
        app:layout_constraintEnd_toEndOf="@+id/seekBar2"
        app:layout_constraintTop_toTopOf="@+id/direction_switch" />

    <TextView
        android:id="@+id/receive_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/seekBar2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/seekBar2"
        app:layout_constraintTop_toBottomOf="@+id/start_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>